Mon Jul 21 22:57:54 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        * CIAO/ciao/*.h:
        * CIAO/docs/templates/CIAO_Glue_Session_Template.h:
        * CIAO/examples/handcrafted/BasicSP/BasicSP_svnt.h:
        * CIAO/examples/handcrafted/BasicSP/BMClosedED/BMClosedED_svnt.h:
        * CIAO/examples/handcrafted/BasicSP/BMDevice/BMDevice_svnt.h:
        * CIAO/examples/handcrafted/BasicSP/BMDisplay/BMDisplay_svnt.h:
        * CIAO/examples/handcrafted/BasicSP/EC/EC_svnt.h:
        * CIAO/examples/handcrafted/Display/HUDisplay_svnt.h:
        * CIAO/examples/handcrafted/Display/GPS/GPS_svnt.h:
        * CIAO/examples/handcrafted/Display/NavDisplay/NavDisplay_svnt.h:
        * CIAO/examples/handcrafted/Display/RateGen/RateGen_svnt.h:
        * CIAO/tools/Assembly_Deployer/*.h:
        * CIAO/tools/Daemon/*.h:
        * CIAO/tools/Simple_Component_Server/Simple_Server_i.h:
        * CIAO/tools/XML_Helpers/Cascadable_DocHandler.h:
        * examples/AMH/Sink_Server/AMH_Servant.h:
        * examples/AMH/Sink_Server/Base_Server.h:
        * examples/Content_Server/AMI_Observer/Push_Iterator_Factory_i.h:
        * orbsvcs/IFR_Service/ifr_visitor_macro.h:
        * orbsvcs/ImplRepo_Service/*.h:
        * orbsvcs/LoadBalancer/Push_Handler.h:
        * orbsvcs/PSS/*.h:
        * orbsvcs/examples/CosEC/Factory/CosEventChannelFactory_i.h:
        * orbsvcs/examples/CosEC/RtEC_Based/lib/*.h:
        * orbsvcs/examples/Notify/Lanes/*.h:
        * orbsvcs/examples/PSS/*.h:
        * orbsvcs/examples/RtEC/MCast/AddrServer.h:
        * orbsvcs/orbsvcs/*.h:
        * orbsvcs/orbsvcs/AV/*.h:
        * orbsvcs/orbsvcs/Concurrency/*.h:
        * orbsvcs/orbsvcs/CosEvent/*.h:
        * orbsvcs/orbsvcs/ETCL/ETCL_Interpreter.h:
        * orbsvcs/orbsvcs/FaultTolerance/:
        * orbsvcs/orbsvcs/IFRService/*.h:
        * orbsvcs/orbsvcs/LoadBalancing/*.h:
        * orbsvcs/orbsvcs/Log/*.h:
        * orbsvcs/orbsvcs/Naming/*.h:
        * orbsvcs/orbsvcs/Notify/*.h: