@@ -12,7 +12,7 @@
 #ifndef TAO_Notify_CONSUMER_H
 #define TAO_Notify_CONSUMER_H
 
-#include "ace/pre.h"
+#include /**/ "ace/pre.h"
 
 #include "ORB_Objects.h"
 #include "tao/RTCORBA/RTCORBA.h"
@@ -131,5 +131,5 @@ protected:
   ACE_Time_Value delay_;
 };
 
-#include "ace/post.h"
+#include /**/ "ace/post.h"
 #endif /* TAO_Notify_CONSUMER_H */
